tests/src/frontend/typechecking/invalid/mutable_field_5.sk
mutable class Cell(mutable value: String) {
  readonly fun get(): String {
    this.value
  }

  mutable fun set(v: String): void {
    this.!value = v; //
    void
  }
}

mutable class Wrapper(cell: mutable Cell) {
  readonly fun get(): String {
    this.cell.get()
  }

  mutable fun set(v: String): void {
    this.!cell.value = v;
    void
  }
}
